--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-native": "0.70.6"
   },
   "devDependencies": {
-    "yarn": "^1.22.19",
+    "@commitlint/cli": "^17.3.0",
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
@@ -32,7 +32,8 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "yarn": "^1.22.19"
   },
   "jest": {
     "preset": "react-native",
