--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react-native": "0.70.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
