--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "dayjs": "^1.11.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-redux": "^8.0.5",
