--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-paper": "^5.0.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
