--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-paper": "^5.0.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
